typo3/sysext/core/Tests/Functional/TypoScript/IncludeTree/Fixtures/IncludeTyposcript/InvalidImport/Scenario3/setup.typoscript
<INCLUDE_TYPOSCRIPT: source="FILE:./../Scenario3/invalidPathTraversalTarget.typoscript">
